# Oi-Grandad

./: .gitignore  .gitmodules  AudioUnit.pkgproj  Credits.txt  Poly vector.preset  README.md  VST3.pkgproj  balancefx.xml  oi grandad.xml  snip.md
.github/: FUNDING.yml
.github/workflows/: build-linux.yml  build-macos-fresh.yml  build-windows.yml  build.yml  linux.yml  macos-signed.yml  macos-unsigned.yml  windows.yml
.spectral_playground_stage/: .gitignore  CMakeLists.txt  README.md
.spectral_playground_stage/Source/: AnalysisEngine.cpp  AnalysisEngine.h  Main.cpp  MainComponent.cpp  SpectralAsset.h  SpectralAssetWriter.h  WaveformPanel.cpp
.spectral_playground_stage/docs/: next-chat-prompt.md  overview.md  roadmap.md
OiGrandad2.component/Contents/: Info.plist
SpectralHelper/: CMakeLists.txt
SpectralHelper/Source/: Main.cpp  MainComponent.cpp  MainComponent.h  SpectralAssetWriter.cpp  WaveformPanel.h
oi grandad/: mod.xml  project_info.xml  user_info.xml
oi grandad!/Binaries/: AutogeneratedProject.jucer
oi grandad!/Presets/: Autosave_2.hip  Autosave_5.hip
oi grandad!/SampleMaps/: 1.xml
oi grandad!/UserPresets/: 1.preset
oi grandad!/XmlPresetBackups/: 4.xml  fm2.xml  gob.xml  maybe.xml  noddy.xml  test.xml
oi grandad.app/Contents/: Info.plist
oi grandad/AudioFiles/: spectral_cache_current.json  spectral_cache_debug.json
oi grandad/Binaries/: AutogeneratedProject.jucer  JUCE  batchCompileOSX
oi grandad/BuildScripts/: BUILD.md  build_dsp_networks.ps1  build_dsp_networks.sh  prepare_ci_exports.sh  test_build_macos.sh.sh
oi grandad/DspNetworks/: AR.xml  Networks.xml  NewGran copy.xml  OutMods.xml  grans4.xml  loris copy.xml  res2.xml
oi grandad/GRAIN SIZE HACK/: HiseNodeFactory.cpp  README.md
oi grandad/Images/: ogbackground.afdesign
oi grandad/ImagesX/: OG_ BG.aftemplate
oi grandad/Other Images/: Untitled.afdesign  ff.afdesign  ogsketch2.afdesign
oi grandad/Presets/: Autosave_1.hip  Autosave_2.hip  Autosave_2.hip 23.11.34  Autosave_3.hip  Autosave_4.hip  Autosave_5.hip  Gran4.hip  Preset.hip  SpecTest.hip  grandad-no-cyc.hip  gtest.hip  og-test2.hip  og-tests.hip  ogrep.hip  oi grandad-nopreload.hip  oi grandad.hip  oi grandad_Recovered.xml  oimono.hip  test.hip  testy.hip
oi grandad/Scripts/: Analyze.js  CableBox.js  Files.js  GeneralLAF.js  KnobLAF.js  KnobLAF1.js  KnobLAF2.js  KnobLAF3.js  KnobLAF4.js  KnobLAF5.js  MasterControls copy.js  MasterControls.js  ModControls.js  MultiChannel.js  RR.js  Rect.js  Voice1.js  Voice2.js  Voice3.js  Voice4.js  convert_spear_to_spectral_json.py  (+2 more)
(+2441 files in other folders)
